Preference setting for white-listing recipes